deploy/k8s/production-web.deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: lub-web
    release: production
  name: lub-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lub-web
      release: production
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lub-web
        release: production
    spec:
      containers:
      - image: us.gcr.io/lub-prod/lub-web:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /nginx_status
            port: 80
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: lub-web
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /nginx_status
            port: 80
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
              memory: "512Mi"
              cpu: "10m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
