deploy/k8s/production-web.service.yml
apiVersion: v1
kind: Service
metadata:
  name: lub-web
  labels:
    app: lub-web
    release: production
    dns: route53
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: lub-web
